[project]
name = "meta-support-openenv"
version = "0.1.0"
description = "Meta Support Triage OpenEnv Environment"
authors = [{name = "Avenger190"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "gradio",
    "pandas",
    "requests",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.openenv]
entry_point = "app:app"
